...
    .string()
    .trim()
    .regex(/^\d{9}$/, "Numéro invalide (9 chiffres attendus)."),
});

export const accountAddEmailSchema = z.object({
  email: z.string().email("Adresse email invalide."),
});

export const accountChangeEmailSchema = z.object({
  email: z.string().email("Adresse email invalide."),
});

...
