appId: com.zoutigo.scoliveapp
name: Smoke Android
tags:
  - smoke
---
- runFlow:
    when:
      visible: "Process system isn't responding"
    commands:
      - tapOn: "Wait"
- runFlow:
    when:
      visible: "System UI isn't responding"
    commands:
      - tapOn: "Wait"
- extendedWaitUntil:
    visible:
      id: "submit-login"
    timeout: 30000
- tapOn:
    id: "tab-email"
- assertVisible:
    id: "input-email"
- tapOn:
    id: "input-email"
- inputText: "invalid-email"
- tapOn:
    id: "input-password"
- inputText: "secret"
- hideKeyboard
- tapOn:
    id: "submit-login"
- extendedWaitUntil:
    visible:
      id: "error-message"
    timeout: 10000
- assertVisible: "Adresse email invalide."
